--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,18 @@
+/**
+ * sass bootstrap
+ */
+$icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
+// bower:scss
+@import "../../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
+// endbower
+
+/**
+ * font awesome
+ */
+
+$fa-font-path: "/bower_components/font-awesome/fonts";
+@import "../../bower_components/font-awesome/scss/font-awesome";
+
 body {
   width: 100%;
   height: 100%;
@@ -219,7 +234,7 @@ a:focus {
   color: #000000;
 }
 .contact-section {
-  background-color: #c4212c;
+  /*background-color: #c4212c;*/
 }
 #map {
   width: 100%;
