--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,12 +13,24 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 $fa-font-path: "/bower_components/font-awesome/fonts";
 @import "../../bower_components/font-awesome/scss/font-awesome";
 
+
+// Variables
+
+$primary: #28c3ab;
+$dark: #000;
+$light: #fff;
+$ci-primary: #C4212C;
+$ci-medium: #EB8024;
+$ci-light: #FCB720;
+
+$font-stack: Helvetica, sans-serif;
+
 body {
   width: 100%;
   height: 100%;
-  font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #000000;
-  background-color: #ffffff;
+  font: $font-stack;
+  color: $dark;
+  background-color: $light;
 }
 html {
   width: 100%;
@@ -49,7 +61,7 @@ p {
   }
 }
 a {
-  color: #28c3ab;
+  color: $primary;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -57,7 +69,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #176e61;
+  color: darken($primary, 20%);
 }
 .light {
   font-weight: 400;
@@ -67,7 +79,7 @@ a:focus {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #eb8024;
+  background-color: $ci-medium;
 }
 .navbar-brand {
   font-weight: 700;
@@ -76,7 +88,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom a {
-  color: #000000;
+  color: $dark;
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -92,7 +104,7 @@ a:focus {
 .navbar-toggle {
   padding: 4px 6px;
   font-size: 16px;
-  color: #ffffff;
+  color: $light;
 }
 .navbar-toggle:focus,
 .navbar-toggle:active {
@@ -110,7 +122,7 @@ a:focus {
   }
   .top-nav-collapse {
     padding: 0;
-    background-color: #fcb720;
+    background-color: $ci-medium;
   }
   .navbar-custom.top-nav-collapse {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -122,9 +134,9 @@ a:focus {
   height: auto;
   padding: 100px 0;
   text-align: center;
-  color: #c4212c;
+  color: $ci-primary;
   background: url("../images/back_whale.png") no-repeat bottom center scroll;
-  background-color: #ffffff;
+  background-color: $light;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   background-size: contain;
@@ -157,10 +169,10 @@ a:focus {
   height: 70px;
   margin-top: 15px;
   padding: 7px 16px;
-  border: 2px solid #c4212c;
+  border: 2px solid $ci-primary;
   border-radius: 35px;
   font-size: 40px;
-  color: #c4212c;
+  color: $ci-primary;
   background: transparent;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
@@ -169,7 +181,7 @@ a:focus {
 .btn-circle:hover,
 .btn-circle:focus {
   outline: none;
-  color: #c4212c;
+  color: $ci-primary;
   background: rgba(255, 255, 255, 0.1);
 }
 .page-scroll .btn-circle i.animated {
@@ -231,10 +243,10 @@ a:focus {
 .download-section {
   width: 100%;
   padding: 50px 0;
-  color: #000000;
+  color: $dark;
 }
 .contact-section {
-  /*background-color: #c4212c;*/
+
 }
 #map {
   width: 100%;
@@ -262,16 +274,16 @@ a:focus {
   transition: all 0.3s ease-in-out;
 }
 .btn-default {
-  border: 1px solid #c4212c;
-  color: #c4212c;
+  border: 1px solid $ci-primary;
+  color: $ci-primary;
   background-color: transparent;
 }
 .btn-default:hover,
 .btn-default:focus {
-  border: 1px solid #c4212c;
+  border: 1px solid $ci-primary;
   outline: none;
-  color: #000000;
-  background-color: #c4212c;
+  color: $dark;
+  background-color: $ci-primary;
 }
 .btn-huge {
   padding: 25px;
