--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,8 +20,9 @@ $fa-font-path: "../fonts";
 // Variables
 
 $primary: #28c3ab;
-$dark: #000;
+$dark: #0d1323;
 $light: #fff;
+
 $ci-primary: #C4212C;
 $ci-medium: #EB8024;
 $ci-light: #FCB720;
@@ -29,51 +30,37 @@ $ci-light: #FCB720;
 $font-stack: Helvetica, sans-serif;
 
 body {
-  width: 100%;
   height: 100%;
-  font: 100% $font-stack;
+  font-family: $font-stack;
   color: $dark;
   background-color: $light;
 }
 html {
-  width: 100%;
   height: 100%;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 35px;
-  text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  letter-spacing: 1px;
-}
+
 p {
   margin: 0 0 25px;
   font-size: 18px;
   line-height: 1.5;
-}
-@media (min-width: 767px) {
-  p {
+  @media (min-width: 767px) {
     margin: 0 0 35px;
     font-size: 20px;
     line-height: 1.6;
   }
 }
+
 a {
   color: $primary;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  :hover, :focus {
+    text-decoration: none;
+//    color: darken($primary, 20%);
+  }
 }
-a:hover,
-a:focus {
-  text-decoration: none;
-  color: darken($primary, 20%);
-}
+
 .light {
   font-weight: 400;
 }
@@ -82,37 +69,47 @@ a:focus {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: $ci-medium;
+  background-color: $dark;
 }
+
 .navbar-brand {
   font-weight: 700;
+
+  :focus {
+    outline: none;
+  }
 }
-.navbar-brand:focus {
-  outline: none;
-}
+
 .navbar-custom a {
-  color: $dark;
+  color: $light;
+  .nav {
+    li {
+      a {
+        -webkit-transition: background 0.3s ease-in-out;
+        -moz-transition: background 0.3s ease-in-out;
+        transition: background 0.3s ease-in-out;
+        :hover, :focus {
+          outline: none;
+          background-color: rgba(255, 255, 255, 0.2);
+        }
+      }
+    }
+    li.active {
+      outline: none;
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+  }
 }
-.navbar-custom .nav li a {
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-}
-.navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li.active {
-  outline: none;
-  background-color: rgba(255, 255, 255, 0.2);
-}
+
 .navbar-toggle {
   padding: 4px 6px;
   font-size: 16px;
   color: $light;
+  :focus, :active {
+    outline: none;
+  }
 }
-.navbar-toggle:focus,
-.navbar-toggle:active {
-  outline: none;
-}
+
 @media (min-width: 767px) {
   .navbar {
     padding: 20px 0;
@@ -125,7 +122,12 @@ a:focus {
   }
   .top-nav-collapse {
     padding: 0;
-    background-color: $ci-medium;
+//    background-color: $light;
+    background-color: rgba(255,255,255,0.95);
+    a {
+      color: $dark;
+    }
+
   }
   .navbar-custom.top-nav-collapse {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -137,13 +139,12 @@ a:focus {
   height: auto;
   padding: 100px 0;
   text-align: center;
-  color: $ci-primary;
-  background: url("../images/back_whale.png") no-repeat bottom center scroll;
-  background-color: $light;
-  -webkit-background-size: contain;
-  -moz-background-size: contain;
-  background-size: contain;
-  -o-background-size: contain;
+  color: $light;
+  background: url("../images/bg_blue.png") no-repeat bottom center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 .intro-body {
   display: table-cell;
@@ -168,14 +169,14 @@ a:focus {
   }
 }
 .btn-circle {
-  width: 70px;
-  height: 70px;
+  width: 120px;
+  height: 120px;
   margin-top: 15px;
   padding: 7px 16px;
-  border: 2px solid $ci-primary;
+  border: 2px solid $dark;
   border-radius: 35px;
   font-size: 40px;
-  color: $ci-primary;
+  color: $dark;
   background: transparent;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
@@ -232,12 +233,12 @@ a:focus {
   }
 }
 .content-section {
-  padding-top: 100px;
+  padding-top: 0px;
 }
 .about-section {
   width: 100%;
   padding: 50px 0;
-  background: url("../images/esports_bg.png") bottom no-repeat;
+  background: url("../images/back_whale.png") bottom no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -248,8 +249,14 @@ a:focus {
   padding: 50px 0;
   color: $dark;
 }
-.contact-section {
-
+.contact {
+//  color: $light;
+  padding-bottom: 50px;
+  background: url("../images/back_whale.png") bottom no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 #map {
   width: 100%;
