--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -83,6 +83,10 @@ p {
     font-size: 15px;
     line-height: 1.8;
   }
+
+  .seperator-left {
+    border: 2px solid black;
+  }
 }
 
 .content-section {
@@ -107,7 +111,6 @@ a {
 
 .navbar {
   margin-bottom: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   background-color: $dark;
   text-transform: uppercase;
   a {
@@ -134,21 +137,13 @@ a {
   }
 }
 
-// TODO: mixin function으로 처리할것
-
 .top-nav-collapse {
-
-
   @include screen-bigger-than(767) {
     padding: 0;
-    background-color: rgba(240,240,240,0.95);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    background-color: rgba(250,250,250,0.95);
     a {
       color: $dark;
     }
-    // li:hover, li:focus {
-    //   background-color: red;
-    // }
   }
 }
 
@@ -165,16 +160,7 @@ a {
     padding-bottom: 20px;
     margin-bottom: 20px;
   }
-
 }
-
-.ci-intro {
-  p {
-    font-size: 20px;
-  }
-}
-
-
 
 .intro {
   @include full-contents;
@@ -186,8 +172,6 @@ a {
 .contact {
   @include full-contents;
   color: $dark;
-  // background: url("../images/back_whale.png") bottom no-repeat;
-  // background-color: $ci-primary;
   @include background-size(contain);
 }
 
