--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -79,17 +79,14 @@ body {
 }
 
 p {
-  margin: 0 0 25px;
-  font-size: 15px;
-  line-height: 1.5;
-  @media (min-width: $screen-break-small) {
-    margin: 0 0 35px;
-    font-size: 15px;
-    line-height: 1.8;
-  }
+  margin: 0 0 35px;
+  font-size: 20px;
+  line-height: 1.8;
 
-  .seperator-left {
-    border: 2px solid black;
+  @include screen-smaller-than(767) {
+    margin: 0 0 25px;
+    font-size: 15px;
+    line-height: 1.5;
   }
 }
 
@@ -144,7 +141,6 @@ a {
 }
 
 
-
 .top-nav-collapse {
   @include screen-bigger-than(767) {
     padding: 0;
@@ -167,6 +163,16 @@ a {
     padding-top: 10px;
     padding-bottom: 20px;
     margin-bottom: 20px;
+  }
+}
+
+.ci-intro {
+  p {
+    font-size: 22px;
+
+    @include screen-smaller-than(767) {
+      font-size: 18px;
+    }
   }
 }
 
