--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -199,7 +199,7 @@ a {
   vertical-align: middle;
 }
 
-footer {
+footer.company {
   padding-top: 20px;
   margin-bottom: 20px;
   border-top: 2px solid rgba(10, 10, 10, 0.9)
